Azure SQL Connection

--- a/MovieLibrary/App.config
+++ b/MovieLibrary/App.config
@@ -36,8 +36,8 @@
       </setting>
     </DevExpress.LookAndFeel.Design.AppSettings>
   </applicationSettings>
-  <connectionStrings>
-    <add name="MovieLibrary.Properties.Settings.MovieLibraryConnectionString" connectionString="Data Source=DESKTOP-3TO3LJ9\SQLEXPRESS;Initial Catalog=MovieLibrary;Integrated Security=True" providerName="System.Data.SqlClient" /><add name="MovieLibraryEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-3TO3LJ9\SQLEXPRESS;initial catalog=MovieLibrary;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="MovieLibrary" connectionString="metadata=res://*/MovieData.csdl|res://*/MovieData.ssdl|res://*/MovieData.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-3TO3LJ9\SQLEXPRESS;initial catalog=MovieLibrary;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="MovieLibraryEntities1" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-3TO3LJ9\SQLEXPRESS;initial catalog=MovieLibrary;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings><add name="MovieLibraryEntities1" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=;initial catalog=MovieLibrary;persist security info=True;user id=;password=;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+    
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
