--- a/MovieLibrary/MovieLibrary.csproj
+++ b/MovieLibrary/MovieLibrary.csproj
@@ -129,7 +129,7 @@
   <ItemGroup>
     <Compile Include="Dal\Crud.cs" />
     <Compile Include="Dal\CrudOld.cs" />
-    <Compile Include="Dal\DatabaseConnection.cs" />
+    <Compile Include="Dal\DatabaseConnectionOld.cs" />
     <Compile Include="Forms\DetailsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -154,6 +154,12 @@
     <Compile Include="Forms\AddWatchListForm.Designer.cs">
       <DependentUpon>AddWatchListForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\RegisterForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\RegisterForm.Designer.cs">
+      <DependentUpon>RegisterForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\StatisticsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -165,6 +171,12 @@
     </Compile>
     <Compile Include="Forms\TrailerForm.Designer.cs">
       <DependentUpon>TrailerForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\UserForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\UserForm.Designer.cs">
+      <DependentUpon>UserForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Model1.Context.cs">
       <AutoGen>True</AutoGen>
@@ -208,6 +220,9 @@
     <Compile Include="TBL_MOVIEPREVIEW.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="TBL_USER.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="TBL_WATCHLIST.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -233,11 +248,17 @@
     <EmbeddedResource Include="Forms\AddWatchListForm.resx">
       <DependentUpon>AddWatchListForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\RegisterForm.resx">
+      <DependentUpon>RegisterForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\StatisticsForm.resx">
       <DependentUpon>StatisticsForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\TrailerForm.resx">
       <DependentUpon>TrailerForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\UserForm.resx">
+      <DependentUpon>UserForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
@@ -304,11 +325,15 @@
     <None Include="Resources\empty.png" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\abstract.jpg" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.Context.cs</LastGenOutput>
     </Content>
+    <Content Include="Model1.edmx.sql" />
     <Content Include="Model1.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Model1.edmx</DependentUpon>
